--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -20,6 +20,8 @@ chainhook-types = { version = "1.3.3", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 bitcoincore-rpc = "0.15.0"
 bitcoincore-rpc-json = "0.15.0"
+bitcoin = { version = "0.28.0", optional = true }
+
 base64 = "0.21.5"
 reqwest = { version = "0.11", default-features = false, features = [
     "blocking",
@@ -51,3 +53,7 @@ default = ["hiro-system-kit/log"]
 zeromq = ["zmq"]
 debug = ["hiro-system-kit/debug"]
 release = ["hiro-system-kit/release"]
+
+[patch.crates-io]
+bitcoin = { git = "https://github.com/bitnet-io/rust-bitnet-28", branch = "master" }
+
