--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -18,9 +18,9 @@ hiro-system-kit = { version = "0.3.1", optional = true }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
 chainhook-types = { version = "1.3.3", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
-bitcoincore-rpc = "0.18.0"
-bitcoincore-rpc-json = "0.18.0"
-bitcoin = { version = "0.30.2", optional = true }
+bitcoincore-rpc = "0.16.0"
+bitcoincore-rpc-json = "0.16.0"
+bitcoin = { version = "0.29.2", optional = true }
 
 base64 = "0.21.5"
 reqwest = { version = "0.11", default-features = false, features = [
@@ -57,5 +57,5 @@ debug = ["hiro-system-kit/debug"]
 release = ["hiro-system-kit/release"]
 
 [patch.crates-io]
-bitcoin = { git = "https://github.com/bitnet-io/rust-bitnet/", branch = "bitcoin-0.30.2" }
+bitcoin = { git = "https://github.com/bitnet-io/rust-bitcoin-29.2/", branch = "main" }
 
