--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -57,5 +57,5 @@ debug = ["hiro-system-kit/debug"]
 release = ["hiro-system-kit/release"]
 
 [patch.crates-io]
-bitcoin = { git = "https://github.com/bitnet-io/rust-bitnet/", branch = "bitcoin-0.30.2" }
+bitcoin = { git = "https://github.com/bitnet-io/rust-bitcoin-31.1/", branch = "main" }
 
